added pictures and code

--- a/index.html
+++ b/index.html
@@ -4,9 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Repo</title>
+    <title>Module-1</title>
+    <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
 </head>
 <body>
+    <h1>Welcome</h1>
+    <h2>This is my first website</h2>
+    <h3>This is H3</h3>
+    <h4>This is H4</h4>
+    <h5>This is H5</h5>
+    <h6>This is H6</h6>    
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores expedita, vitae culpa quas dolor quo numquam iusto laudantium ducimus iure tempora eum voluptatum qui quisquam odio ipsa possimus inventore quam.</p>
+
+    This is a <b>bold text</b>. <br>
+    This is a <i>italic text</i>. <br>
+    This is a <strong>Strong text</strong>. <br>
+    This is a <small>small</small> text .
+    <hr>
+    <ol>
+        <li>JSC</li>
+        <li>SSC</li>
+        <li>HSC</li>
+        <li>B.Sc.</li>
+        <li>M.Sc.</li>
+    </ol>
+    <hr>
+    <ul>
+        <li>Biriyani</li>
+        <li>Roast</li>
+        <li>Borhani</li>
+        <li>Mach vaja</li>
+        <li>BBQ</li>
+        <li>Pan</li>
+    </ul>
+    <hr>
+    <ul>
+        <a href="https://www.youtube.com/">Youtube Link</a><br>
+        <a href="https://www.instagram.com/">Instagram Link</a> <br>
+    </ul>
+
+    <img src="https://st.depositphotos.com/1006706/2671/i/600/depositphotos_26715369-stock-photo-which-way-to-choose-3d.jpg" alt=""> <br>
+    <img src="img1.jpg" alt=""> <br>
+
+    <input type="text"> <br>
+    <input type="password"> <br>
+    <input type="checkbox"> <br>
+    <input type="radio"> <br>
+    <input type="search">
     
 </body>
 </html>
